[gd_scene load_steps=6 format=3 uid="uid://d14a682u5fykf"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wh5vx"]
[ext_resource type="PackedScene" uid="uid://b5iigvwigjset" path="res://Entitys/player.tscn" id="2_f1wgu"]
[ext_resource type="PackedScene" uid="uid://p65adbrxay3u" path="res://Entitys/enemy.tscn" id="3_ph3ul"]
[ext_resource type="PackedScene" uid="uid://bxh01je8bjg6d" path="res://Entitys/enemy_2.tscn" id="4_rej02"]
[ext_resource type="PackedScene" uid="uid://dw6xvss7c3drn" path="res://Entitys/hud.tscn" id="4_u58dv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wh5vx")
enemy_scenes = Array[PackedScene]([ExtResource("3_ph3ul"), ExtResource("4_rej02")])

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_u58dv")]

[node name="Player" parent="." instance=ExtResource("2_f1wgu")]
position = Vector2(848, 881)
motion_mode = 1

[node name="SpawnPosPlayer" type="Marker2D" parent="."]
position = Vector2(261, 788)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
